# Learn_openGL

./: CMakeLists.txt  README.md
res/: test.blend  test.blend1
res/models/: bunny.mtl  cube.mtl
res/models/queen/: queen.mtl
res/models/rover/: rover.mtl
res/models/spaceman/: spaceman.mtl
res/models/spaceman/colorChart/: color.blend  color.blend1  color.mtl
res/models/spaceman/universal/: s.sbs
res/models/spaceman/universal/.autosave/: s_0.sbs
shader/: lambert_frag.glsl  lambert_vert.glsl  pbr_frag.glsl  pbr_vert.glsl
shader/deferred/: geo_frag.glsl  geo_vert.glsl
shader/deferred/pbr/: deferred_pbr_frag.glsl  deferred_vert.glsl
shader/pbr/: convolve_cubemap.glsl  pbr_frag.glsl  pbr_vert.glsl  precompute_brdf.glsl  prefilter_cubemap.glsl
shader/shadow/: shadow_vert.glsl
shader/skybox/: skybox_frag.glsl  skybox_vert.glsl
src/: main.cpp
src/camera/: camera.cpp  camera.h
src/core/: application.cpp  application.h  renderer.cpp  renderer.h  window.cpp  window.h
src/effects/: skyBox.cpp  skyBox.h
src/material/: material.cpp  material.h  shader.cpp  shader.h  texture.cpp  texture.h
src/model/: mesh.cpp  mesh.h  model.cpp  model.h
src/render/: deferredRenderer.cpp  deferredRenderer.h  forwardRenderer.cpp  forwardRenderer.h  gbuffer.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  renderer.cpp  renderer.h  scene.h  shader.cpp  shader.h  shadow.cpp  shadow.h
src/render/light/: LightManager.cpp  LightManager.h  directionalLight.cpp  directionalLight.h  light.cpp  light.h  pointLight.cpp  pointLight.h  spotLight.cpp  spotLight.h
src/render/scenes/: defaultSence.cpp  defaultSence.h  rove.cpp  rover.cpp  rover.h  scene.h  sss.cpp  sss.h  sssSence.cpp  sssSence.h
src/shader/: lambert_vert.glsl
src/util/: ImGuiManager.h  config.h  imGuiManager.cpp  objLoader.cpp  objLoader.h  shader.cpp  shader.h  window.cpp  window.h
src/window/: ImGuiManager.h  imGuiManager.cpp  window.cpp  window.h
